<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/undo_icon_11"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/redo_icon_11"
        android:title="@string/menu_redo"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_new"
        android:title="@string/menu_new" />
    <item android:id="@+id/menu_open"
        android:title="@string/menu_open" />
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save_2"
        android:title="@string/menu_save_asoff" />
    <item android:id="@+id/menu_save_as"
        android:title="@string/menu_save_as"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_close"
        android:visible="false" />
    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info" />
</menu>